--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <a-scene background="color: #ECECEC">
       
       <a-assets>
-        <a-asset-item id="whale" src="https://hsudml.github.io/3D-Model-Template/scene.gltf"></a-asset-item>
+        <a-asset-item id="whale" src="https://hsudml.github.io/whaleTest/scene.gltf"></a-asset-item>
         
         <a-timeline id="myTimeline">
           <a-timeline-animation select="#text1" name="moveleft"></a-timeline-animation>
